Added Navigation to the ViewModel

--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -57,6 +57,7 @@
     </Compile>
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
+    <Compile Include="ViewModel\SpeciesPageViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
