--- a/Src/FishOnMobileApp/FishOnMobileApp/packages.config
+++ b/Src/FishOnMobileApp/FishOnMobileApp/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms.Maps" version="2.3.3.175" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
