--- a/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/FishOnMobileApp.WinPhone.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/FishOnMobileApp.WinPhone.csproj
@@ -123,6 +123,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Plugin.Geolocator, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xam.Plugin.Geolocator.4.0.0-beta12\lib\wpa81\Plugin.Geolocator.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Plugin.Geolocator.Abstractions, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xam.Plugin.Geolocator.4.0.0-beta12\lib\wpa81\Plugin.Geolocator.Abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.175\lib\wpa81\Xamarin.Forms.Core.dll</HintPath>
       <Private>True</Private>
