--- a/Src/FishOnMobileApp/FishOnMobileApp/packages.config
+++ b/Src/FishOnMobileApp/FishOnMobileApp/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugin.Geolocator" version="4.0.0-beta12" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms.Maps" version="2.3.3.175" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
