--- a/Src/FishOnMobileApp/FishOnMobileApp.iOS/packages.config
+++ b/Src/FishOnMobileApp/FishOnMobileApp.iOS/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Geolocator" version="4.0.0-beta12" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Maps" version="2.3.3.175" targetFramework="xamarinios10" />
