--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -44,19 +44,25 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\FishingLure.cs" />
     <Compile Include="Model\FishOn.cs" />
     <Compile Include="Model\Lake.cs" />
+    <Compile Include="Model\MoonPhase.cs" />
     <Compile Include="Model\SessionData.cs" />
     <Compile Include="Model\Species.cs" />
     <Compile Include="Model\WayPoint.cs" />
     <Compile Include="Model\WeatherCondition.cs" />
+    <Compile Include="PlatformInterfaces\IFileHelper.cs" />
+    <Compile Include="PlatformInterfaces\ISQLite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\FishOnHttpRepository.cs" />
+    <Compile Include="Repositories\FishOnDataContext.cs" />
     <Compile Include="Repositories\LakeRepository.cs" />
     <Compile Include="Repositories\SpeciiesRepository.cs" />
     <Compile Include="Repositories\WayPointRepository.cs" />
     <Compile Include="Services\LakeDataService.cs" />
+    <Compile Include="Services\MoonPhaseParsingService.cs" />
     <Compile Include="Services\SpeciesDataService.cs" />
     <Compile Include="Services\WaypointDataService.cs" />
     <Compile Include="Services\WeatherService.cs" />
@@ -86,6 +92,14 @@
     </Reference>
     <Reference Include="Plugin.Geolocator.Abstractions, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xam.Plugin.Geolocator.4.0.0-beta12\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.Geolocator.Abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLite.Net.Async, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net.Async-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.Async.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
