--- a/Src/UnitTests/packages.config
+++ b/Src/UnitTests/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
+  <package id="Moq" version="4.5.29" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net45" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="net45" />
   <package id="Xamarin.UITest" version="1.3.8" targetFramework="net45" />
 </packages>
