--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Services\SpeciesDataService.cs" />
     <Compile Include="Services\WaypointDataService.cs" />
     <Compile Include="Services\WeatherService.cs" />
+    <Compile Include="SimpleInputModal.xaml.cs">
+      <DependentUpon>SimpleInputModal.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SpeciesListPage.xaml.cs">
       <DependentUpon>SpeciesListPage.xaml</DependentUpon>
     </Compile>
@@ -77,6 +80,7 @@
     <Compile Include="ViewModel\LakeListViewModel.cs" />
     <Compile Include="ViewModel\LakeMapPageViewModel.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
+    <Compile Include="ViewModel\SimpleInputModalViewModel.cs" />
     <Compile Include="ViewModel\SpeciesPageViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +157,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LakeListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SimpleInputModal.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
