--- a/Src/FishOnMobileApp/FishOnMobileApp.Droid/packages.config
+++ b/Src/FishOnMobileApp/FishOnMobileApp.Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Permissions" version="1.1.7" targetFramework="monoandroid60" />
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="monoandroid60" />
