--- a/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/FishOnMobileApp.WinPhone.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/FishOnMobileApp.WinPhone.csproj
@@ -124,6 +124,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Plugin.Geolocator, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xam.Plugin.Geolocator.4.0.0-beta12\lib\wpa81\Plugin.Geolocator.dll</HintPath>
       <Private>True</Private>
