--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -54,9 +54,18 @@
     <Compile Include="Model\Species.cs" />
     <Compile Include="Model\WayPoint.cs" />
     <Compile Include="Model\WeatherCondition.cs" />
+    <Compile Include="MyDataListPage.xaml.cs">
+      <DependentUpon>MyDataListPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PlatformInterfaces\IFileHelper.cs" />
     <Compile Include="PlatformInterfaces\ISQLite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProvisioningPages\WayPoints\WPDetailPage.xaml.cs">
+      <DependentUpon>WPDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ProvisioningPages\WayPoints\WPProvisoningList.xaml.cs">
+      <DependentUpon>WPProvisoningList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\FishRepository.cs" />
     <Compile Include="Repositories\FishOnHttpRepository.cs" />
@@ -80,8 +89,10 @@
     <Compile Include="ViewModel\LakeListViewModel.cs" />
     <Compile Include="ViewModel\LakeMapPageViewModel.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
+    <Compile Include="ViewModel\MyDataListViewModel.cs" />
     <Compile Include="ViewModel\SimpleInputModalViewModel.cs" />
     <Compile Include="ViewModel\SpeciesPageViewModel.cs" />
+    <Compile Include="ProvisioningPages\WayPoints\WayPointProvisioningViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
@@ -94,6 +105,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Plugin.Geolocator, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xam.Plugin.Geolocator.4.0.0-beta12\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.Geolocator.dll</HintPath>
       <Private>True</Private>
@@ -140,7 +155,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +177,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SimpleInputModal.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MyDataListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ProvisioningPages\WayPoints\WPDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ProvisioningPages\WayPoints\WPProvisoningList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
