--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -38,13 +38,20 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="LakeListPage.xaml.cs">
+    <Compile Include="Model\AppSetting.cs" />
+    <Compile Include="Pages_VMs\LakeMap\LakeMapDetailPage.xaml.cs">
+      <DependentUpon>LakeMapDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages_VMs\LakeMap\LakeMapMasterDetailPage.xaml.cs">
+      <DependentUpon>LakeMapMasterDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages_VMs\LakeMap\LakeMapMasterPage.xaml.cs">
+      <DependentUpon>LakeMapMasterPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages_VMs\LakesList\LakeListPage.xaml.cs">
       <DependentUpon>LakeListPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="LakeMapPage.xaml.cs">
-      <DependentUpon>LakeMapPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="Pages_VMs\MainPage\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\FishingLure.cs" />
@@ -54,19 +61,20 @@
     <Compile Include="Model\Species.cs" />
     <Compile Include="Model\WayPoint.cs" />
     <Compile Include="Model\WeatherCondition.cs" />
-    <Compile Include="MyDataListPage.xaml.cs">
+    <Compile Include="Pages_VMs\MyData\MyDataListPage.xaml.cs">
       <DependentUpon>MyDataListPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="PlatformInterfaces\IFileHelper.cs" />
     <Compile Include="PlatformInterfaces\IFishOnCurrentLocationService.cs" />
     <Compile Include="PlatformInterfaces\ISQLite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProvisioningPages\WayPoints\WPDetailPage.xaml.cs">
+    <Compile Include="Pages_VMs\ProvisioningPages\WayPoints\WPDetailPage.xaml.cs">
       <DependentUpon>WPDetailPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ProvisioningPages\WayPoints\WPProvisoningList.xaml.cs">
+    <Compile Include="Pages_VMs\ProvisioningPages\WayPoints\WPProvisoningList.xaml.cs">
       <DependentUpon>WPProvisoningList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\AppSettingRepo.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\FishRepository.cs" />
     <Compile Include="Repositories\FishOnHttpRepository.cs" />
@@ -75,28 +83,29 @@
     <Compile Include="Repositories\SpeciesRepository.cs" />
     <Compile Include="Repositories\WayPointRepository.cs" />
     <Compile Include="Repositories\WeatherRepository.cs" />
+    <Compile Include="Services\AppSettingService.cs" />
     <Compile Include="Services\LakeDataService.cs" />
     <Compile Include="Services\SpeciesDataService.cs" />
     <Compile Include="Services\WaypointDataService.cs" />
     <Compile Include="Services\WeatherService.cs" />
-    <Compile Include="SimpleInputModal.xaml.cs">
+    <Compile Include="Pages_VMs\SimpleInputModal\SimpleInputModal.xaml.cs">
       <DependentUpon>SimpleInputModal.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SpeciesListPage.xaml.cs">
+    <Compile Include="Pages_VMs\Species\SpeciesListPage.xaml.cs">
       <DependentUpon>SpeciesListPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="Pages_VMs\BaseViewModel.cs" />
     <Compile Include="Utils\Extensions.cs" />
-    <Compile Include="ViewModel\LakeListViewModel.cs" />
-    <Compile Include="ViewModel\LakeMapPageViewModel.cs" />
-    <Compile Include="ViewModel\MainPageViewModel.cs" />
-    <Compile Include="ViewModel\MyDataListViewModel.cs" />
-    <Compile Include="ViewModel\SimpleInputModalViewModel.cs" />
-    <Compile Include="ViewModel\SpeciesPageViewModel.cs" />
-    <Compile Include="ProvisioningPages\WayPoints\WayPointProvisioningViewModel.cs" />
+    <Compile Include="Pages_VMs\LakesList\LakeListViewModel.cs" />
+    <Compile Include="Pages_VMs\LakeMap\LakeMapPageViewModel.cs" />
+    <Compile Include="Pages_VMs\MainPage\MainPageViewModel.cs" />
+    <Compile Include="Pages_VMs\MyData\MyDataListViewModel.cs" />
+    <Compile Include="Pages_VMs\SimpleInputModal\SimpleInputModalViewModel.cs" />
+    <Compile Include="Pages_VMs\Species\SpeciesPageViewModel.cs" />
+    <Compile Include="Pages_VMs\ProvisioningPages\WayPoints\WayPointProvisioningViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MainPage.xaml">
+    <EmbeddedResource Include="Pages_VMs\MainPage\MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -151,43 +160,55 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SpeciesListPage.xaml">
+    <EmbeddedResource Include="Pages_VMs\Species\SpeciesListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LakeMapPage.xaml">
+    <EmbeddedResource Include="Pages_VMs\LakesList\LakeListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LakeListPage.xaml">
+    <EmbeddedResource Include="Pages_VMs\SimpleInputModal\SimpleInputModal.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SimpleInputModal.xaml">
+    <EmbeddedResource Include="Pages_VMs\MyData\MyDataListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MyDataListPage.xaml">
+    <EmbeddedResource Include="Pages_VMs\ProvisioningPages\WayPoints\WPDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ProvisioningPages\WayPoints\WPDetailPage.xaml">
+    <EmbeddedResource Include="Pages_VMs\ProvisioningPages\WayPoints\WPProvisoningList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ProvisioningPages\WayPoints\WPProvisoningList.xaml">
+    <EmbeddedResource Include="Pages_VMs\LakeMap\LakeMapMasterDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages_VMs\LakeMap\LakeMapMasterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages_VMs\LakeMap\LakeMapDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
