--- a/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/FishOnMobileApp.WinPhone.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp.WinPhone/FishOnMobileApp.WinPhone.csproj
@@ -104,6 +104,7 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="fish_on_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
