Added AccordionNodeViewModel.  Refactored MyFishDetailPage and VM to use it

--- a/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
+++ b/Src/FishOnMobileApp/FishOnMobileApp/FishOnMobileApp.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Model\AppSetting.cs" />
     <Compile Include="Model\ViewModel\FishOnGroupBySpeciesViewModel.cs" />
     <Compile Include="Model\ViewModel\FishOnGroupByWayPointViewModel.cs" />
+    <Compile Include="Pages_MVs\AccordionViewModel\AccordionNodeViewModel.cs" />
     <Compile Include="Pages_MVs\LakeMap\LakeMapDetailPage.xaml.cs">
       <DependentUpon>LakeMapDetailPage.xaml</DependentUpon>
     </Compile>
